new rocket parts without enum